--- a/Demo_app/src/main/res/menu/menu_main.xml
+++ b/Demo_app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,7 @@
       tools:context=".MainActivity">
   <item android:id="@+id/clear"
         android:title="@string/clear"
-        android:orderInCategory="10"
-        app:showAsAction="never"/>
+        android:orderInCategory="10"/>
   <item android:id="@+id/adaptingDemo_standard"
         android:title="@string/adaptingDemo_standardFragment_name"
         android:orderInCategory="100"
@@ -25,5 +24,13 @@
   <item android:id="@+id/dataBindingDemo_improvement1"
         android:title="@string/dataBindingDemo_improvement1Fragment_name"
         android:orderInCategory="111"
+        app:showAsAction="never"/>
+  <item android:id="@+id/adapterFrameworkDemo_simple"
+        android:title="@string/adapterFrameworkDemo_SimpleFragment_name"
+        android:orderInCategory="120"
+        app:showAsAction="never"/>
+  <item android:id="@+id/adapterFrameworkDemo_adaptable"
+        android:title="@string/adapterFrameworkDemo_AdaptableFragment_name"
+        android:orderInCategory="120"
         app:showAsAction="never"/>
 </menu>
