--- a/Demo_app/src/main/res/layout/adapting_demo_data_binding_improved_list_item.xml
+++ b/Demo_app/src/main/res/layout/adapting_demo_data_binding_improved_list_item.xml
@@ -37,7 +37,7 @@
           android:text="@{loadingViewModel.viewModel.string}"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="@dimen/list_item_label_text_size"
           android:textStyle="bold"/>
 
       <TextView
@@ -48,7 +48,8 @@
           android:layout_toEndOf="@id/label"
           android:layout_marginStart="12dp"
           android:layout_alignBaseline="@id/label"
-          android:textColor="@android:color/darker_gray"/>
+          android:textColor="@android:color/darker_gray"
+          android:textSize="@dimen/list_item_delay_text_size"/>
 
       <TextView
           android:id="@+id/bind_label"
@@ -58,7 +59,8 @@
           android:layout_below="@id/delay"
           android:layout_marginTop="2dp"
           android:layout_alignStart="@id/delay"
-          android:textColor="@android:color/holo_red_dark"/>
+          android:textColor="@android:color/holo_red_dark"
+          android:textSize="@dimen/list_item_bind_text_size"/>
       <TextView
           android:id="@+id/bind"
           android:text="@{loadingViewModel.bindTime}"
@@ -67,7 +69,8 @@
           android:layout_alignBaseline="@id/bind_label"
           android:layout_marginTop="2dp"
           android:layout_toEndOf="@id/bind_label"
-          android:textColor="@android:color/holo_red_dark"/>
+          android:textColor="@android:color/holo_red_dark"
+          android:textSize="@dimen/list_item_bind_text_size"/>
     </RelativeLayout>
 
     <!-- == Loading placeholder ============================================= -->
