--- a/Demo_app/src/main/res/values-w820dp/dimens.xml
+++ b/Demo_app/src/main/res/values-w820dp/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
   <dimen name="activity_horizontal_margin">64dp</dimen>
+  <dimen name="list_item_label_text_size">24sp</dimen>
+  <dimen name="list_item_delay_text_size">24sp</dimen>
+  <dimen name="list_item_bind_text_size">24sp</dimen>
 </resources>
