--- a/Demo_app/src/main/res/values/dimens.xml
+++ b/Demo_app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
   <!-- Default screen margins, per the Android Design guidelines. -->
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
+  <dimen name="list_item_progress_text_size">24sp</dimen>
   <dimen name="list_item_label_text_size">16sp</dimen>
   <dimen name="list_item_delay_text_size">16sp</dimen>
   <dimen name="list_item_bind_text_size">16sp</dimen>
