--- a/Demo_app/src/main/res/layout/adapting_demo_data_binding_improved_list_item.xml
+++ b/Demo_app/src/main/res/layout/adapting_demo_data_binding_improved_list_item.xml
@@ -74,12 +74,21 @@
     </RelativeLayout>
 
     <!-- == Loading placeholder ============================================= -->
-    <ProgressBar
+    <RelativeLayout
         android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="@{loadingViewModel.viewModel != null ? View.GONE : View.VISIBLE}"/>
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="@android:drawable/edit_text"
+        android:visibility="@{loadingViewModel.viewModel != null ? View.GONE : View.VISIBLE}">
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_centerInParent="true"
+          android:text="..."
+          android:textColor="#999999"
+          android:textSize="@dimen/list_item_progress_text_size"/>
+    </RelativeLayout>
   </RelativeLayout>
 </layout>
