--- a/Demo_app/src/main/res/layout/adapting_demo_fragment.xml
+++ b/Demo_app/src/main/res/layout/adapting_demo_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
   <ProgressBar
-      android:id="@+id/progressBar"
+      android:id="@+id/loadingView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       style="@style/Widget.AppCompat.ProgressBar"
