--- a/Demo_app/src/main/res/layout/adapting_demo_list_item_loading.xml
+++ b/Demo_app/src/main/res/layout/adapting_demo_list_item_loading.xml
@@ -3,23 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+  <!-- == Content ========================================================= -->
   <include
       android:id="@+id/content"
       layout="@layout/adapting_demo_list_item"/>
 
-  <RelativeLayout
-      android:id="@+id/progressBar"
+  <!-- == Loading placeholder ============================================= -->
+  <TextView
+      android:id="@+id/loadingView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingTop="16dp"
-      android:paddingBottom="16dp"
-      android:background="@android:drawable/edit_text">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="..."
-        android:textColor="#999999"
-        android:textSize="@dimen/list_item_progress_text_size"/>
-  </RelativeLayout>
+      android:paddingTop="20dp"
+      android:paddingBottom="20dp"
+      android:background="@android:drawable/edit_text"
+      android:text="..."
+      android:gravity="center"
+      android:textColor="#999999"
+      android:textSize="@dimen/list_item_progress_text_size"/>
 </RelativeLayout>
