--- a/Demo_app/src/main/res/layout/adapting_demo_fragment.xml
+++ b/Demo_app/src/main/res/layout/adapting_demo_fragment.xml
@@ -10,7 +10,7 @@
       style="@style/Widget.AppCompat.ProgressBar"
       android:layout_gravity="center"/>
 
-  <android.support.v7.widget.RecyclerView
+  <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_view"
       android:scrollbars="vertical"
       android:layout_width="match_parent"
